# evolisa

./: README.md  pyproject.toml
src/: generate.py
utils/: contributions.py  dna.py  polygon.py  utils.py
